--- a/index.html
+++ b/index.html
@@ -49,10 +49,60 @@
                         <div class="cardNumber">3</div>
                         <span class="cardIcon"><i class="fa-solid fa-store fa-lg" style="color: #9356DC;"></i>
                         </span>
-                        <h3 class="cardTxt">Dégustez au restaurants</h3>
+                        <h3 class="cardTxt">Dégustez au restaurant</h3>
                     </article>
                 </div>
             </section>
+            <section class="restos">
+                <h1 class="restosTitle">Restaurants</h1>
+                <div class="restosList">
+                    <a href="#" class="restosCard">
+                        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Un plat du menu La palette du goût">
+                        <div class="tag">Nouveau</div>
+                        <div class="restosInfos">
+                            <h3 class="restosTxt">La palette du goût</h3>
+                            <p class="restosTxt">Ménilmontant</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="restosList">
+                    <a href="#" class="restosCard">
+                        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Un plat du menu La note enchantée">
+                        <div class="tag">Nouveau</div>
+                        <div class="restosInfos">
+                            <h3 class="restosTxt">La note enchantée</h3>
+                            <p class="restosTxt">Charonne</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="restosList">
+                    <a href="#" class="restosCard">
+                        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Un plat du menu À la française">
+                        <div class="restosInfos">
+                            <h3 class="restosTxt">À la française</h3>
+                            <p class="restosTxt">Cité Rouge</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="restosList">
+                    <a href="#" class="restosCard">
+                        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Un plat du menu Le délice des sens">
+                        <div class="restosInfos">
+                            <h3 class="restosTxt">Le délice des sens</h3>
+                            <p class="restosTxt">Folie-Mericourt</p>
+                        </div>
+                    </a>
+                </div>
+            </section>
         </main>
+        <footer>
+            <h3 class="footerTitle">ohmyfood</h3>
+            <div class="footerLink">
+                <a href="#"><i class="fa-solid fa-utensils" style="color: #ffffff;"></i> Proposer un restaurant</a>
+                <a href="#"><i class="fa-solid fa-handshake-angle" style="color: #ffffff;"></i> Devenir partenaire</a>
+                <a href="#">Mentions légales</a>
+                <a href="#">Contact</a>
+            </div>
+        </footer>
     </body>
 </html>
