création coeur et ajustements

--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
             integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
             crossorigin="anonymous" referrerpolicy="no-referrer">
-        <link rel="stylesheet" href="SASS/style.css">
+        <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -23,7 +23,11 @@
     <main>
         <img class="backImg" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo accueil La palette du goût">
         <section class="restosName">
-            <div class="restosHead">La palette du goût</div>
+            <div class="restosHead">La palette du goût
+                <div class="heartIcon">
+                    <i class="fa-regular fa-heart"></i>
+                </div>
+            </div>
             <div class="allMenu">
                 <section class="menuBlock">
                     <div class="menuTitle">ENTRÉES</div>
@@ -122,10 +126,10 @@
     <footer>
         <h3 class="footerTitle">ohmyfood</h3>
         <div class="footerLink">
-            <a href="#"><i class="fa-solid fa-utensils" style="color: #ffffff;"></i> Proposer un restaurant</a>
-            <a href="#"><i class="fa-solid fa-handshake-angle" style="color: #ffffff;"></i> Devenir partenaire</a>
+            <a href="#"><i class="fa-solid fa-utensils fa-sm iconWhite"></i> Proposer un restaurant</a>
+            <a href="#"><i class="fa-solid fa-handshake-angle fa-xs iconWhite"></i>Devenir partenaire</a>
             <a href="#">Mentions légales</a>
-            <a href="#">Contact</a>
+            <a href="mailto:ohmyfood@contact.com">Contact</a>
         </div>
     </footer>
 </body>
