--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
             integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
             crossorigin="anonymous" referrerpolicy="no-referrer">
-        <link rel="stylesheet" href="SASS/style.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <header>
@@ -18,7 +18,7 @@
                 <img src="images/logo/ohmyfood.png" alt="Logo Oh My Food" width="170" height="28">
             </div>
             <div class="location">
-                <i class="fa-solid fa-location-dot" style="color: #000000;"></i>
+                <i class="fa-solid fa-location-dot"></i>
                 <div class="Txt">Paris, Belleville</div>
             </div>
         </header>
@@ -35,19 +35,19 @@
                 <div class="steps">
                     <article class="functionCard">
                         <div class="cardNumber">1</div>
-                        <span class="cardIcon"><i class="fa-solid fa-mobile-screen-button fa-lg" style="color: #7e7e7e;"></i>
+                        <span class="cardIcon"><i class="fa-solid fa-mobile-screen-button fa-lg iconGrey"></i>
                         </span>
                         <h3 class="cardTxt">Choisissez un restaurant</h3>
                     </article>
                     <article class="functionCard">
                         <div class="cardNumber">2</div>
-                        <span class="cardIcon"><i class="fa-solid fa-list-ul fa-lg" style="color: #7e7e7e;"></i>
+                        <span class="cardIcon"><i class="fa-solid fa-list-ul fa-lg iconGrey"></i>
                         </span>
                         <h3 class="cardTxt">Composez votre menu</h3>
                     </article>
                     <article class="functionCard">
                         <div class="cardNumber">3</div>
-                        <span class="cardIcon"><i class="fa-solid fa-store fa-lg" style="color: #9356DC;"></i>
+                        <span class="cardIcon"><i class="fa-solid fa-store fa-lg iconPurple"></i>
                         </span>
                         <h3 class="cardTxt">Dégustez au restaurant</h3>
                     </article>
@@ -58,39 +58,59 @@
                 <div class="restosList">
                     <a href="#" class="restosCard">
                         <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Un plat du menu La palette du goût">
-                        <div class="tag">Nouveau</div>
+                    <div class="tag">Nouveau</div>
+                    <div class="restosdetail">
                         <div class="restosInfos">
                             <h3 class="restosTxt">La palette du goût</h3>
                             <p class="restosTxt">Ménilmontant</p>
                         </div>
+                        <div class="heartIcon">
+                            <i class="fa-regular fa-heart fa-xl"></i>
+                        </div>
+                    </div>
                     </a>
                 </div>
                 <div class="restosList">
                     <a href="#" class="restosCard">
                         <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Un plat du menu La note enchantée">
-                        <div class="tag">Nouveau</div>
+                    <div class="tag">Nouveau</div>
+                    <div class="restosdetail">
                         <div class="restosInfos">
                             <h3 class="restosTxt">La note enchantée</h3>
                             <p class="restosTxt">Charonne</p>
                         </div>
+                        <div class="heartIcon">
+                            <i class="fa-regular fa-heart fa-xl"></i>
+                        </div>
+                    </div>
                     </a>
                 </div>
                 <div class="restosList">
                     <a href="#" class="restosCard">
                         <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Un plat du menu À la française">
+                    <div class="restosdetail">
                         <div class="restosInfos">
                             <h3 class="restosTxt">À la française</h3>
                             <p class="restosTxt">Cité Rouge</p>
                         </div>
+                        <div class="heartIcon">
+                            <i class="fa-regular fa-heart fa-xl"></i>
+                        </div>     
+                    </div>
                     </a>
                 </div>
                 <div class="restosList">
                     <a href="#" class="restosCard">
                         <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Un plat du menu Le délice des sens">
+                    <div class="restosdetail">
                         <div class="restosInfos">
                             <h3 class="restosTxt">Le délice des sens</h3>
-                            <p class="restosTxt">Folie-Mericourt</p>
+                            <p class="restosTxt">Folie-Méricourt</p>
                         </div>
+                        <div class="heartIcon">
+                            <i class="fa-regular fa-heart fa-xl"></i>
+                        </div>     
+                    </div>
                     </a>
                 </div>
             </section>
@@ -98,10 +118,10 @@
         <footer>
             <h3 class="footerTitle">ohmyfood</h3>
             <div class="footerLink">
-                <a href="#"><i class="fa-solid fa-utensils" style="color: #ffffff;"></i> Proposer un restaurant</a>
-                <a href="#"><i class="fa-solid fa-handshake-angle" style="color: #ffffff;"></i> Devenir partenaire</a>
+                <a href="#"><i class="fa-solid fa-utensils fa-sm iconWhite"></i> Proposer un restaurant</a>
+                <a href="#"><i class="fa-solid fa-handshake-angle fa-xs iconWhite"></i>Devenir partenaire</a>
                 <a href="#">Mentions légales</a>
-                <a href="#">Contact</a>
+                <a href="mailto:ohmyfood@contact.com">Contact</a>
             </div>
         </footer>
     </body>
