--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
                             <p class="restosTxt">Ménilmontant</p>
                         </div>
                         <div class="heartIcon">
-                            <i class="fa-regular fa-heart fa-xl"></i>
+                            <i class="fa-regular fa-heart fa-xl emptyHeart"></i>
+                            <i class="fa-solid fa-heart fa-xl filledHeart"></i>
                         </div>
                     </div>
                     </a>
