--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -39,6 +39,9 @@
                             </div>
                             <p class="dishesPrice">25€</p>
                         </div>
+                        <div class="menuSelect">
+                            <span><i class="fa-regular fa-circle-check iconCheck"></i></span>
+                        </div> 
                     </article>
                     <article class="menuChoices">
                         <div class="dishesCard">
