--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -25,7 +25,8 @@
         <section class="restosName">
             <div class="restosHead">La palette du goût
                 <div class="heartIcon">
-                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-regular fa-heart fa-xl emptyHeart"></i>
+                    <i class="fa-solid fa-heart fa-xl filledHeart"></i>
                 </div>
             </div>
             <div class="allMenu">
@@ -38,10 +39,11 @@
                                 <p class="dishesSpec">Au piment d'Espelette</p>
                             </div>
                             <p class="dishesPrice">25€</p>
+                            <div class="menuSelect">
+                                <i class="fa-regular fa-circle-check iconCheck"></i>
+                            </div>
                         </div>
-                        <div class="menuSelect">
-                            <span><i class="fa-regular fa-circle-check iconCheck"></i></span>
-                        </div> 
+                        
                     </article>
                     <article class="menuChoices">
                         <div class="dishesCard">
@@ -59,6 +61,9 @@
                                 <p class="dishesSpec">Assaisonné à la truffe sur lit de caviar</p>
                             </div>
                             <p class="dishesPrice">20€</p>
+                            <div class="menuSelect">
+                                <span><i class="fa-regular fa-circle-check iconCheck"></i></span>
+                            </div>
                         </div>
                     </article>
                 </section>
