--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
+        <div class="loaderWrap">
+            <div class="loader">
+                <img src="images/Loader/restaurant.png">
+            </div>
+        </div>
         <header>
             <div class="header">
                 <img src="images/logo/ohmyfood.png" alt="Logo Oh My Food" width="170" height="28">
@@ -56,38 +61,39 @@
             <section class="restos">
                 <h1 class="restosTitle">Restaurants</h1>
                 <div class="restosList">
-                    <a href="#" class="restosCard">
-                        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Un plat du menu La palette du goût">
                     <div class="tag">Nouveau</div>
+                    <a href="Pages Restaurants/la-palette-du-gout.html" class="restosCard">
+                        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Un plat du menu La palette du goût">
                     <div class="restosdetail">
                         <div class="restosInfos">
                             <h3 class="restosTxt">La palette du goût</h3>
                             <p class="restosTxt">Ménilmontant</p>
                         </div>
                         <div class="heartIcon">
-                            <i class="fa-regular fa-heart fa-xl emptyHeart"></i>
-                            <i class="fa-solid fa-heart fa-xl filledHeart"></i>
+                            <i class="fa-regular fa-heart emptyHeart"></i>
+                            <i class="fa-solid fa-heart filledHeart"></i>
                         </div>
                     </div>
                     </a>
                 </div>
-                <div class="restosList">
-                    <a href="#" class="restosCard">
-                        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Un plat du menu La note enchantée">
+                <div class="restosList2">
                     <div class="tag">Nouveau</div>
+                    <a href="Pages Restaurants/la-note-enchantee.html" class="restosCard">
+                        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Un plat du menu La note enchantée">
                     <div class="restosdetail">
                         <div class="restosInfos">
                             <h3 class="restosTxt">La note enchantée</h3>
                             <p class="restosTxt">Charonne</p>
                         </div>
                         <div class="heartIcon">
-                            <i class="fa-regular fa-heart fa-xl"></i>
+                            <i class="fa-regular fa-heart emptyHeart"></i>
+                            <i class="fa-solid fa-heart filledHeart"></i>
                         </div>
                     </div>
                     </a>
                 </div>
-                <div class="restosList">
-                    <a href="#" class="restosCard">
+                <div class="restosList3">
+                    <a href="Pages Restaurants/A-la-francaise.html" class="restosCard">
                         <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Un plat du menu À la française">
                     <div class="restosdetail">
                         <div class="restosInfos">
@@ -95,13 +101,14 @@
                             <p class="restosTxt">Cité Rouge</p>
                         </div>
                         <div class="heartIcon">
-                            <i class="fa-regular fa-heart fa-xl"></i>
+                            <i class="fa-regular fa-heart emptyHeart"></i>
+                            <i class="fa-solid fa-heart filledHeart"></i>
                         </div>     
                     </div>
                     </a>
                 </div>
-                <div class="restosList">
-                    <a href="#" class="restosCard">
+                <div class="restosList4">
+                    <a href="Pages Restaurants/le-delice-des-sens.html" class="restosCard">
                         <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Un plat du menu Le délice des sens">
                     <div class="restosdetail">
                         <div class="restosInfos">
@@ -109,7 +116,8 @@
                             <p class="restosTxt">Folie-Méricourt</p>
                         </div>
                         <div class="heartIcon">
-                            <i class="fa-regular fa-heart fa-xl"></i>
+                            <i class="fa-regular fa-heart emptyHeart"></i>
+                            <i class="fa-solid fa-heart filledHeart"></i>
                         </div>     
                     </div>
                     </a>
