--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <header>
             <div class="header">
-                <img src="images/logo/ohmyfood.png" alt="Logo Oh My Food" width="170" height="28">
+                <img src="images/logo/ohmyfood.png" alt="Logo Oh My Food">
             </div>
             <div class="location">
                 <i class="fa-solid fa-location-dot"></i>
@@ -35,6 +35,7 @@
             </section>
         </nav>
         <main>
+            <div class="function-and-restos">
             <section class="function">
                 <h1>Fonctionnement</h1>
                 <div class="steps">
@@ -60,6 +61,7 @@
             </section>
             <section class="restos">
                 <h1 class="restosTitle">Restaurants</h1>
+                <div class="cardTablet">
                 <div class="restosList">
                     <div class="tag">Nouveau</div>
                     <a href="Pages Restaurants/la-palette-du-gout.html" class="restosCard">
@@ -122,7 +124,9 @@
                     </div>
                     </a>
                 </div>
+                </div>
             </section>
+            </div>
         </main>
         <footer>
             <h3 class="footerTitle">ohmyfood</h3>
