--- a/Pages_restaurants/la-palette-du-gout.html
+++ b/Pages_restaurants/la-palette-du-gout.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Le délice des sens</title>
+    <title>La palette du goût</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet">
@@ -13,11 +13,6 @@
         <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <div class="loaderWrap">
-        <div class="loader">
-            <img src="../images/Loader/restaurant.png">
-        </div>
-    </div>
     <header>
         <div class="headerBack">
             <a href="../index.html" class="arrow">
@@ -26,9 +21,9 @@
         </div>
     </header>
     <main>
-        <img class="backImg" src="../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Photo accueil Le delice des sens">
+        <img class="backImg" src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo accueil La palette du goût">
         <section class="restosName">
-            <div class="restosHead">Le délice des sens
+            <div class="titleAlign"><h2 class="restosHead">La palette du goût</h2>
                 <div class="heartIcon">
                     <i class="fa-regular fa-heart emptyHeart"></i>
                     <i class="fa-solid fa-heart filledHeart"></i>
@@ -36,119 +31,119 @@
             </div>
             <div class="allMenu">
                 <section class="menuBlock">
-                    <div class="menuTitle">ENTRÉES</div>
-                    <article class="menuChoices">
+                    <div><h2 class="menuTitle">ENTRÉES</h2></div>
+                    <article class="menuChoices menudelay1">
                         <div class="dishesCard">
                             <div class="dishesInfo">
-                                <h3 class="dishesName">Tartare de thon</h3>
-                                <p class="dishesSpec">Assaisoné au yuzu</p>
+                                <h3 class="dishesName">Fricassée d'escargots</h3>
+                                <p class="dishesSpec">Au piment d'Espelette</p>
                             </div>
                             <p class="dishesPrice">25€</p>
-                            <div class="menuSelect">
-                                <i class="fa-solid fa-circle-check iconCheck"></i>
-                            </div>
+                        </div>
+                        <div class="menuSelect">
+                            <i class="fa-solid fa-circle-check iconCheck"></i>
                         </div>
                     </article>
-                    <article class="menuChoices">
+                    <article class="menuChoices menudelay2">
                         <div class="dishesCard">
                             <div class="dishesInfo">
-                                <h3 class="dishesName">Bouchée de homard croustillant</h3>
-                                <p class="dishesSpec">Et sa farandole de petits légumes</p>
+                                <h3 class="dishesName">Foie gras de canard mi-cuit</h3>
+                                <p class="dishesSpec">Et ses copeaux de truffe noire</p>
                             </div>
                             <p class="dishesPrice">35€</p>
-                            <div class="menuSelect">
-                                <i class="fa-solid fa-circle-check iconCheck"></i>
-                            </div>
+                        </div>
+                        <div class="menuSelect">
+                            <i class="fa-solid fa-circle-check iconCheck"></i>
                         </div>
                     </article>
-                    <article class="menuChoices">
+                    <article class="menuChoices menudelay3">
                         <div class="dishesCard">
                             <div class="dishesInfo">
-                                <h3 class="dishesName">Poulet rôti aux herbes de Provence</h3>
-                                <p class="dishesSpec">Et sa crème de truffe</p>
+                                <h3 class="dishesName">Œuf au plat</h3>
+                                <p class="dishesSpec">Assaisonné à la truffe sur lit de caviar</p>
                             </div>
-                            <p class="dishesPrice">40€</p>
-                            <div class="menuSelect">
-                                <i class="fa-solid fa-circle-check iconCheck"></i>
-                            </div>
+                            <p class="dishesPrice">20€</p>
+                        </div>
+                        <div class="menuSelect">
+                            <i class="fa-solid fa-circle-check iconCheck"></i>
                         </div>
                     </article>
                 </section>
                 <section class="menuBlock">
-                    <div class="menuTitle">PLATS</div>
-                    <article class="menuChoices">
+                    <div><h2 class="menuTitle">PLATS</h2></div>
+                    <article class="menuChoices menudelay1">
                         <div class="dishesCard">
                             <div class="dishesInfo">
-                                <h3 class="dishesName">Poulet rôti aux herbes de Provence</h3>
-                                <p class="dishesSpec">Et sa crème de truffe</p>
+                                <h3 class="dishesName">Filet de bœuf aux herbes</h3>
+                                <p class="dishesSpec">Accompagné de sa ribambelle de légumes</p>
                             </div>
                             <p class="dishesPrice">40€</p>
-                            <div class="menuSelect">
-                                <i class="fa-solid fa-circle-check iconCheck"></i>
-                            </div>
+                        </div>
+                        <div class="menuSelect">
+                            <i class="fa-solid fa-circle-check iconCheck"></i>
                         </div>
                     </article>
-                    <article class="menuChoices">
+                    <article class="menuChoices menudelay2">
                         <div class="dishesCard">
                             <div class="dishesInfo">
-                                <h3 class="dishesName">Langouste rôtie</h3>
-                                <p class="dishesSpec">Et ses légumes de saison</p>
+                                <h3 class="dishesName">Parmentier de queue de bœuf</h3>
+                                <p class="dishesSpec">À la truffe noire sur sa purée de panais</p>
                             </div>
                             <p class="dishesPrice">35€</p>
-                            <div class="menuSelect">
-                                <i class="fa-solid fa-circle-check iconCheck"></i>
-                            </div>
                         </div>
+                        <div class="menuSelect">
+                            <i class="fa-solid fa-circle-check iconCheck"></i>
+                        </div>        
                     </article>
-                    <article class="menuChoices">
+                    <article class="menuChoices menudelay3">
                         <div class="dishesCard">
                             <div class="dishesInfo">
-                                <h3 class="dishesName">Côte de bœuf Angus</h3>
-                                <p class="dishesSpec">Et sa purée de panais</p>
+                                <h3 class="dishesName">Filet de turbot</h3>
+                                <p class="dishesSpec">Aux agrumes</p>
                             </div>
                             <p class="dishesPrice">44€</p>
-                            <div class="menuSelect">
-                                <i class="fa-solid fa-circle-check iconCheck"></i>
-                            </div>
                         </div>
+                        <div class="menuSelect">
+                            <i class="fa-solid fa-circle-check iconCheck"></i>
+                        </div>        
                     </article>
                 </section>
                 <section class="menuBlock">
-                    <div class="menuTitle">DESSERTS</div>
-                    <article class="menuChoices">
+                    <div><h2 class="menuTitle">DESSERTS</h2></div>
+                    <article class="menuChoices menudelay1">
                         <div class="dishesCard">
                             <div class="dishesInfo">
-                                <h3 class="dishesName">Farandole de desserts</h3>
-                                <p class="dishesSpec">Du chef</p>
+                                <h3 class="dishesName">Paris-Brest</h3>
+                                <p class="dishesSpec">revisité</p>
                             </div>
                             <p class="dishesPrice">18€</p>
-                            <div class="menuSelect">
-                                <i class="fa-solid fa-circle-check iconCheck"></i>
-                            </div>
-                        </div>
+                        </div>   
+                        <div class="menuSelect">
+                            <i class="fa-solid fa-circle-check iconCheck"></i>
+                        </div>    
                     </article>
-                    <article class="menuChoices">
+                    <article class="menuChoices menudelay2">
                         <div class="dishesCard">
                             <div class="dishesInfo">
-                                <h3 class="dishesName">Crème brulée</h3>
-                                <p class="dishesSpec">Revisitée</p>
+                                <h3 class="dishesName">Macarons au chocolat d'exception</h3>
+                                <p class="dishesSpec">Et glace à la vanille de Madagascar</p>
                             </div>
                             <p class="dishesPrice">22€</p>
-                            <div class="menuSelect">
-                                <i class="fa-solid fa-circle-check iconCheck"></i>
-                            </div>
+                        </div>
+                        <div class="menuSelect">
+                            <i class="fa-solid fa-circle-check iconCheck"></i>
                         </div>
                     </article>
-                    <article class="menuChoices">
+                    <article class="menuChoices menudelay3">
                         <div class="dishesCard">
                             <div class="dishesInfo">
-                                <h3 class="dishesName">Tiramisu</h3>
-                                <p class="dishesSpec">À la noisette</p>
+                                <h3 class="dishesName">Mousse au chocolat</h3>
+                                <p class="dishesSpec">Au piment d'Espelette et à la truffe noire</p>
                             </div>
                             <p class="dishesPrice">23€</p>
-                            <div class="menuSelect">
-                                <i class="fa-solid fa-circle-check iconCheck"></i>
-                            </div>
+                        </div>
+                        <div class="menuSelect">
+                            <i class="fa-solid fa-circle-check iconCheck"></i>
                         </div>
                     </article>
                 </section>
@@ -157,12 +152,12 @@
         </section>
     </main>
     <footer>
-        <h3 class="footerTitle">ohmyfood</h3>
+        <div class="footerDesktop"><h3 class="footerTitle">ohmyfood</h3></div>
         <div class="footerLink">
             <a href="#"><i class="fa-solid fa-utensils fa-sm iconWhite"></i> Proposer un restaurant</a>
             <a href="#"><i class="fa-solid fa-handshake-angle fa-xs iconWhite"></i>Devenir partenaire</a>
             <a href="#">Mentions légales</a>
-            <a href="mailto:ohmyfood@contact.com">Contact</a>
+            <a href="mailto:contact@ohmyfood.com">Contact</a>
         </div>
     </footer>
 </body>
