--- a/Pages_restaurants/la-note-enchantee.html
+++ b/Pages_restaurants/la-note-enchantee.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>À La française</title>
+    <title>La note enchantée</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet">
@@ -13,11 +13,6 @@
         <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <div class="loaderWrap">
-        <div class="loader">
-            <img src="../images/Loader/restaurant.png">
-        </div>
-    </div>
     <header>
         <div class="headerBack">
             <a href="../index.html" class="arrow">
@@ -26,9 +21,9 @@
         </div>
     </header>
     <main>
-        <img class="backImg" src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo accueil À la française">
+        <img class="backImg" src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo accueil La note enchantée">
         <section class="restosName">
-            <div class="restosHead">À la française
+            <div class="titleAlign"><h2 class="restosHead">La note enchantée</h2>
                 <div class="heartIcon">
                     <i class="fa-regular fa-heart emptyHeart"></i>
                     <i class="fa-solid fa-heart filledHeart"></i>
@@ -36,12 +31,12 @@
             </div>
             <div class="allMenu">
                 <section class="menuBlock">
-                    <div class="menuTitle">ENTRÉES</div>
-                    <article class="menuChoices">
+                    <div><h2 class="menuTitle">ENTRÉES</h2></div>
+                    <article class="menuChoices menudelay1">
                         <div class="dishesCard">
                             <div class="dishesInfo">
-                                <h3 class="dishesName">Tartare de poule acidulé</h3>
-                                <p class="dishesSpec">Aux zestes d'orange</p>
+                                <h3 class="dishesName">Ravioles de foie gras</h3>
+                                <p class="dishesSpec">Accompagnées de leur crème à la truffe</p>
                             </div>
                             <p class="dishesPrice">25€</p>
                             <div class="menuSelect">
@@ -49,11 +44,11 @@
                             </div>
                         </div>
                     </article>
-                    <article class="menuChoices">
+                    <article class="menuChoices menudelay2">
                         <div class="dishesCard">
                             <div class="dishesInfo">
-                                <h3 class="dishesName">Velouté de légumes d'antan</h3>
-                                <p class="dishesSpec">Carotte, panais, topinambour</p>
+                                <h3 class="dishesName">Caviar osciètre</h3>
+                                <p class="dishesSpec">Sur blini à la farine de blé noir</p>
                             </div>
                             <p class="dishesPrice">35€</p>
                             <div class="menuSelect">
@@ -61,11 +56,11 @@
                             </div>
                         </div>
                     </article>
-                    <article class="menuChoices">
+                    <article class="menuChoices menudelay3">
                         <div class="dishesCard">
                             <div class="dishesInfo">
-                                <h3 class="dishesName">Soupe à l'oignon</h3>
-                                <p class="dishesSpec">Revisitée</p>
+                                <h3 class="dishesName">Homard et espuma de potiron</h3>
+                                <p class="dishesSpec">Marinés aux zestes d'orange</p>
                             </div>
                             <p class="dishesPrice">20€</p>
                             <div class="menuSelect">
@@ -73,26 +68,11 @@
                             </div>
                         </div>
                     </article>
-                </section>
-                <section class="menuBlock">
-                    <div class="menuTitle">PLATS</div>
-                    <article class="menuChoices">
+                    <article class="menuChoices menudelay4">
                         <div class="dishesCard">
                             <div class="dishesInfo">
-                                <h3 class="dishesName">Coquilles Saint-Jacques</h3>
-                                <p class="dishesSpec">Accompagné d'une purée de panais</p>
-                            </div>
-                            <p class="dishesPrice">40€</p>
-                            <div class="menuSelect">
-                                <i class="fa-solid fa-circle-check iconCheck"></i>
-                            </div>
-                        </div>
-                    </article>
-                    <article class="menuChoices">
-                        <div class="dishesCard">
-                            <div class="dishesInfo">
-                                <h3 class="dishesName">Magret de canard</h3>
-                                <p class="dishesSpec">Et parmentier de pommes de terre</p>
+                                <h3 class="dishesName">Foie gras de canard entier</h3>
+                                <p class="dishesSpec">Confiture de figue et pain toasté</p>
                             </div>
                             <p class="dishesPrice">35€</p>
                             <div class="menuSelect">
@@ -100,13 +80,40 @@
                             </div>
                         </div>
                     </article>
-                    <article class="menuChoices">
+                </section>
+                <section class="menuBlock">
+                    <div><h2 class="menuTitle">PLATS</h2></div>
+                    <article class="menuChoices menudelay1">
                         <div class="dishesCard">
                             <div class="dishesInfo">
-                                <h3 class="dishesName">Pigeonneau d'Ille-et-Vilaine</h3>
-                                <p class="dishesSpec">Sur son lit de gnocchis aux légumes</p>
+                                <h3 class="dishesName">Noix de coquille Saint-Jacques</h3>
+                                <p class="dishesSpec">Sur lit de purée de céleri-rave</p>
                             </div>
-                            <p class="dishesPrice">44€</p>
+                            <p class="dishesPrice">40€</p>
+                            <div class="menuSelect">
+                                <i class="fa-solid fa-circle-check iconCheck"></i>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="menuChoices menudelay2">
+                        <div class="dishesCard">
+                            <div class="dishesInfo">
+                                <h3 class="dishesName">Langoustine poêlée</h3>
+                                <p class="dishesSpec">Purée de patate douce</p>
+                            </div>
+                            <p class="dishesPrice">35€</p>
+                            <div class="menuSelect">
+                                <i class="fa-solid fa-circle-check iconCheck"></i>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="menuChoices menudelay3">
+                        <div class="dishesCard">
+                            <div class="dishesInfo">
+                                <h3 class="dishesName">Mijoté de queue de bœuf</h3>
+                                <p class="dishesSpec">Et riz sauvage aux zestes de citron</p>
+                            </div>
+                            <p class="dishesPrice">45€</p>
                             <div class="menuSelect">
                                 <i class="fa-solid fa-circle-check iconCheck"></i>
                             </div>
@@ -114,12 +121,12 @@
                     </article>
                 </section>
                 <section class="menuBlock">
-                    <div class="menuTitle">DESSERTS</div>
-                    <article class="menuChoices">
+                    <div><h2 class="menuTitle">DESSERTS</h2></div>
+                    <article class="menuChoices menudelay1">
                         <div class="dishesCard">
                             <div class="dishesInfo">
-                                <h3 class="dishesName">Pétales de violettes glacés</h3>
-                                <p class="dishesSpec">Et purée de noisettes</p>
+                                <h3 class="dishesName">Macaron noisette et chocolat</h3>
+                                <p class="dishesSpec">Glace au caramel brun et sel de Guérande</p>
                             </div>
                             <p class="dishesPrice">18€</p>
                             <div class="menuSelect">
@@ -127,11 +134,11 @@
                             </div>
                         </div>
                     </article>
-                    <article class="menuChoices">
+                    <article class="menuChoices menudelay2">
                         <div class="dishesCard">
                             <div class="dishesInfo">
-                                <h3 class="dishesName">Fondant au chocolat</h3>
-                                <p class="dishesSpec">Revisité</p>
+                                <h3 class="dishesName">Baba au rhum revisité</h3>
+                                <p class="dishesSpec">Avec son coulis de citron</p>
                             </div>
                             <p class="dishesPrice">22€</p>
                             <div class="menuSelect">
@@ -139,11 +146,11 @@
                             </div>
                         </div>
                     </article>
-                    <article class="menuChoices">
+                    <article class="menuChoices menudelay3">
                         <div class="dishesCard">
                             <div class="dishesInfo">
-                                <h3 class="dishesName">Millefeuille croustillant</h3>
-                                <p class="dishesSpec">Myrtilles et pâte d'amande</p>
+                                <h3 class="dishesName">Tarte au citron meringuée</h3>
+                                <p class="dishesSpec">Destructurée</p>
                             </div>
                             <p class="dishesPrice">23€</p>
                             <div class="menuSelect">
@@ -157,12 +164,12 @@
         </section>
     </main>
     <footer>
-        <h3 class="footerTitle">ohmyfood</h3>
+        <div class="footerDesktop"><h3 class="footerTitle">ohmyfood</h3></div>
         <div class="footerLink">
             <a href="#"><i class="fa-solid fa-utensils fa-sm iconWhite"></i> Proposer un restaurant</a>
             <a href="#"><i class="fa-solid fa-handshake-angle fa-xs iconWhite"></i>Devenir partenaire</a>
             <a href="#">Mentions légales</a>
-            <a href="mailto:ohmyfood@contact.com">Contact</a>
+            <a href="mailto:contact@ohmyfood.com">Contact</a>
         </div>
     </footer>
 </body>
