--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <div class="loaderWrap">
             <div class="loader">
-                <img src="images/Loader/restaurant.png">
+                <img src="images/Loader/restaurant.png" alt="Des couverts de table qui tournent">
             </div>
         </div>
         <header>
@@ -35,9 +35,8 @@
             </section>
         </nav>
         <main>
-            <div class="function-and-restos">
             <section class="function">
-                <h1>Fonctionnement</h1>
+                <h2>Fonctionnement</h2>
                 <div class="steps">
                     <article class="functionCard">
                         <div class="cardNumber">1</div>
@@ -62,79 +61,78 @@
             <section class="restos">
                 <h1 class="restosTitle">Restaurants</h1>
                 <div class="cardTablet">
-                <div class="restosList">
-                    <div class="tag">Nouveau</div>
-                    <a href="Pages Restaurants/la-palette-du-gout.html" class="restosCard">
-                        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Un plat du menu La palette du goût">
-                    <div class="restosdetail">
-                        <div class="restosInfos">
-                            <h3 class="restosTxt">La palette du goût</h3>
-                            <p class="restosTxt">Ménilmontant</p>
+                    <div class="restosList">
+                        <div class="tag">Nouveau</div>
+                        <a href="Pages_restaurants/la-palette-du-gout.html" class="restosCard">
+                            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Un plat du menu La palette du goût">
+                        <div class="restosdetail">
+                            <div class="restosInfos">
+                                <h3 class="restosTxt">La palette du goût</h3>
+                                <p class="restosTxt">Ménilmontant</p>
+                            </div>
                         </div>
+                        </a>
                         <div class="heartIcon">
                             <i class="fa-regular fa-heart emptyHeart"></i>
                             <i class="fa-solid fa-heart filledHeart"></i>
                         </div>
                     </div>
-                    </a>
-                </div>
-                <div class="restosList2">
-                    <div class="tag">Nouveau</div>
-                    <a href="Pages Restaurants/la-note-enchantee.html" class="restosCard">
-                        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Un plat du menu La note enchantée">
-                    <div class="restosdetail">
-                        <div class="restosInfos">
-                            <h3 class="restosTxt">La note enchantée</h3>
-                            <p class="restosTxt">Charonne</p>
+                    <div class="restosList delay1">
+                        <div class="tag">Nouveau</div>
+                        <a href="Pages_restaurants/la-note-enchantee.html" class="restosCard">
+                            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Un plat du menu La note enchantée">
+                        <div class="restosdetail">
+                            <div class="restosInfos">
+                                <h3 class="restosTxt">La note enchantée</h3>
+                                <p class="restosTxt">Charonne</p>
+                            </div>
                         </div>
+                        </a>
                         <div class="heartIcon">
                             <i class="fa-regular fa-heart emptyHeart"></i>
                             <i class="fa-solid fa-heart filledHeart"></i>
-                        </div>
+                        </div>        
                     </div>
-                    </a>
-                </div>
-                <div class="restosList3">
-                    <a href="Pages Restaurants/A-la-francaise.html" class="restosCard">
-                        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Un plat du menu À la française">
-                    <div class="restosdetail">
-                        <div class="restosInfos">
-                            <h3 class="restosTxt">À la française</h3>
-                            <p class="restosTxt">Cité Rouge</p>
+                    <div class="restosList delay2">
+                        <a href="Pages_restaurants/A-la-francaise.html" class="restosCard">
+                            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Un plat du menu À la française">
+                        <div class="restosdetail">
+                            <div class="restosInfos">
+                                <h3 class="restosTxt">À la française</h3>
+                                <p class="restosTxt">Cité Rouge</p>
+                            </div>
                         </div>
+                        </a>
                         <div class="heartIcon">
                             <i class="fa-regular fa-heart emptyHeart"></i>
                             <i class="fa-solid fa-heart filledHeart"></i>
-                        </div>     
+                        </div>                 
                     </div>
-                    </a>
-                </div>
-                <div class="restosList4">
-                    <a href="Pages Restaurants/le-delice-des-sens.html" class="restosCard">
-                        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Un plat du menu Le délice des sens">
-                    <div class="restosdetail">
+                    <div class="restosList delay3">
+                        <a href="Pages_restaurants/le-delice-des-sens.html" class="restosCard">
+                            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Un plat du menu Le délice des sens">
+                        <div class="restosdetail">
                         <div class="restosInfos">
                             <h3 class="restosTxt">Le délice des sens</h3>
                             <p class="restosTxt">Folie-Méricourt</p>
                         </div>
-                        <div class="heartIcon">
-                            <i class="fa-regular fa-heart emptyHeart"></i>
-                            <i class="fa-solid fa-heart filledHeart"></i>
-                        </div>     
+                        </div>
+                        </a>
+                            <div class="heartIcon">
+                                <i class="fa-regular fa-heart emptyHeart"></i>
+                                <i class="fa-solid fa-heart filledHeart"></i>
+                            </div>
                     </div>
-                    </a>
-                </div>
                 </div>
             </section>
-            </div>
         </main>
         <footer>
-            <h3 class="footerTitle">ohmyfood</h3>
+            <div class="footerDesktop"><h3 class="footerTitle">ohmyfood</h3></div>
             <div class="footerLink">
                 <a href="#"><i class="fa-solid fa-utensils fa-sm iconWhite"></i> Proposer un restaurant</a>
                 <a href="#"><i class="fa-solid fa-handshake-angle fa-xs iconWhite"></i>Devenir partenaire</a>
                 <a href="#">Mentions légales</a>
-                <a href="mailto:ohmyfood@contact.com">Contact</a>
+                <a href="mailto:contact@ohmyfood.com">Contact</a>
             </div>
         </footer>
     </body>
